--- a/.github/workflows/output-info-workflow.yml
+++ b/.github/workflows/output-info-workflow.yml
@@ -2,7 +2,7 @@ name: Output information
 on: workflow_dispatch
 jobs:  
   info:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Output GitHub context
         run: echo "${{ toJSON(github) }}"
